# resource_management

./: docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
resource_reservation/: README.rst  __manifest__.py
resource_reservation/controllers/: main.py
resource_reservation/data/: resource_reservation_email_template.xml
resource_reservation/demo/: demo.xml
resource_reservation/models/: __init__.py  resource.py  resource_availability.py  resource_reservation.py
resource_reservation/security/: ir.model.access.csv  resource_reservation_groups.xml  resource_reservation_security.xml
resource_reservation/static/src/js/: custom_save_validation.js
resource_reservation/views/: error_template.xml  menu.xml  reservation_portal.xml  resource_availability.xml  resource_form_submission_template.xml  resource_reservation_tag_views.xml  resource_reservation_views.xml  resource_views.xml
