[tool.poetry]
name = "resource-management"
version = "16.0.1.3.3"
description = "Resource management platform for managing resources"
authors = ["MCAF"]
license = "OPL-1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
typos = "^1.22.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
